--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link js-scroll-trigger" href="#download">Download</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="mailto:hc+melona@artifyapp.com">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="mailto:contact@melona.app">Contact</a>
             </li>
           </ul>
         </div>
